--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -1,3 +1,4 @@
+
 {# ==========================================================================
 
    render()
@@ -8,13 +9,14 @@
 
    Create nav markup when given:
 
-   items:               An array of tuples used to display nav items. 
+   items:               An array of tuples used to display nav items.
                         format: (href, id, caption)
 
-   active_item_id:      A string indicating the id of the nav item 
+   active_item_id:      A string indicating the id of the nav item
                         to be activated.
 
-   additional_classes:  Extra classes you wish to add to the nav, space separated.
+   additional_classes:  Extra classes you wish to add to the nav,
+                        space separated.
 
    ========================================================================== #}
 
