--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -20,7 +20,8 @@
                        create the filtered URL: {{ path }}?filter_tags={{ tag }}.
 
    hide_heading:       The optional boolean flag to hide the tags_heading element.
-                       Defaults to false. Adds class 'tags__hide-heading' if true value passed.
+                       Defaults to false.
+                       Adds class 'tags__hide-heading' if true value passed.
 
    display_block       The optional boolean flag to display the tags list as block.
                        Defaults to false. Adds class 'tags__block-list' if true
