Finishing up the styles to have the form match the designed version

--- a/static/css/cf-enhancements.less
+++ b/static/css/cf-enhancements.less
@@ -849,6 +849,11 @@ textarea {
         width: 100%;
         box-sizing: border-box;
     }
+
+    textarea {
+        height: 10em;
+    }
+
     select,
     .custom-select {
         width: 100%;
