Updated to remove default status notification
- No longer shows the default status on page load or after clearing the input.
- Separates out the button/input listeners so either or both can be used
- Removes duplicate seach submissions

--- a/static/css/cf-notifications.less
+++ b/static/css/cf-notifications.less
@@ -74,8 +74,8 @@
         margin: 0;
 
         .short-desc {
-          display: block;
-          font-size: 16px;
+            display: block;
+            font-size: @base-font-size-px;
         }
     }
 }
