--- a/static/css/forms.less
+++ b/static/css/forms.less
@@ -3,17 +3,6 @@
    forms
    ========================================================================== */
 
-
-
-/*
-  Radio Button Styling
-*/
-.u-reset {
-  border: 0;
-  margin: 0;
-  padding: 0;
-}
-
 /* topdoc
     name: Custom select menus via jquery.custom-input
     family: cfgov-forms
@@ -642,13 +631,12 @@
 }
 
 .form-l-inset {
-      // The margin between two columns is 30px.
-      border-left-width: 2.5px;
-      border-right-width: 2.5px;
-    &:first-child { border-left-width: 15px;}
-    &:last-child {
-        border-right-width: 15px;
-      }
+    // The default margin between two columns is 30px.
+    // The following rules shrink it to 5px for the insets
+    border-right-width: 2.5px;
+    + .form-l-inset { border-left-width: 2.5px; }
+    &:last-child { border-right-width: 15px; }
+
     .form-l-inset_container {
       padding: unit((@grid_gutter-width / 2) / @base-font-size-px, em)
                unit((@grid_gutter-width / 2) / @base-font-size-px, em);
