--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -161,17 +161,19 @@
 
 <div class="sliding-nav">
   <div class="sliding-nav_nav">
-
-    {% include "header.html" %}
+    {% block header %}
+        {% include "header.html" %}
+    {% endblock header %}
 
     <!-- PRIMARY CONTENT -->
     {% block content %}
         This will be replaced in templates that extend this template and override "content".
     {% endblock content %}
-    <!-- /PRIMARY CONTENT -->
+     <!-- /PRIMARY CONTENT -->
 
-    {% include "footer.html" %}
-
+    {% block footer %}
+        {% include "footer.html" %}
+    {% endblock footer %}
   </div><!-- END .sliding-nav_page -->
 </div><!-- END .sliding-nav -->
 
