--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -1731,114 +1731,6 @@ textarea.success {
   -webkit-font-smoothing: antialiased;
 }
 
-.cf-icon__lg {
-  font-size: 1.33333333em;
-  line-height: .75em;
-  vertical-align: -15%;
-}
-
-.cf-icon__2x {
-  font-size: 2em;
-}
-
-.cf-icon__3x {
-  font-size: 3em;
-}
-
-.cf-icon__4x {
-  font-size: 4em;
-}
-
-.cf-icon__5x {
-  font-size: 5em;
-}
-
-.cf-icon__border {
-  padding: .2em .25em .15em;
-  border: solid .08em #eee;
-  border-radius: .1em;
-}
-
-.cf-icon__rotate-90 {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
-  -webkit-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  transform: rotate(90deg);
-}
-
-.cf-icon__rotate-180 {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
-  -webkit-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  transform: rotate(180deg);
-}
-
-.cf-icon__rotate-270 {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
-  -webkit-transform: rotate(270deg);
-  -ms-transform: rotate(270deg);
-  transform: rotate(270deg);
-}
-
-.cf-icon__flip-horizontal {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=0, mirror=1);
-  -webkit-transform: scale(-1, 1);
-  -ms-transform: scale(-1, 1);
-  transform: scale(-1, 1);
-}
-
-.cf-icon__flip-vertical {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2, mirror=1);
-  -webkit-transform: scale(1, -1);
-  -ms-transform: scale(1, -1);
-  transform: scale(1, -1);
-}
-
-:root .cf-icon__rotate-90,
-:root .cf-icon__rotate-180,
-:root .cf-icon__rotate-270,
-:root .cf-icon__flip-horizontal,
-:root .cf-icon__flip-vertical {
-  -webkit-filter: none;
-  filter: none;
-}
-
-.cf-icon__spin {
-  -webkit-animation: cf-spin 2s infinite linear;
-  animation: cf-spin 2s infinite linear;
-}
-
-.cf-icon__pulse {
-  -webkit-animation: cf-spin 1s infinite steps(8);
-  animation: cf-spin 1s infinite steps(8);
-}
-
-@-webkit-keyframes cf-spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
-
-@keyframes cf-spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(359deg);
-    -ms-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
-
 .cf-icon-left:before {
   content: "\e000";
 }
@@ -9873,6 +9765,105 @@ a.focus .summary_event-date {
   display: inline-block;
   padding-right: 20px;
   margin-bottom: 10px;
+}
+
+.external-site_container {
+  font-family: "AvenirNextLTW01-Regular",Arial,sans-serif;
+  font-style: normal;
+  font-weight: normal;
+}
+
+.external-site_container em,
+.external-site_container i {
+  font-family: "AvenirNextLTW01-Italic",Arial,sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+
+.lt-ie9 .external-site_container em,
+.lt-ie9 .external-site_container i {
+  font-style: normal !important;
+}
+
+.external-site_container strong,
+.external-site_container b {
+  font-family: "AvenirNextLTW01-Demi",Arial,sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .external-site_container strong,
+.lt-ie9 .external-site_container b {
+  font-weight: normal !important;
+}
+
+.external-site_container .content_bar {
+  background: #babbbd;
+  height: 1px;
+}
+
+.external-site_container .padded-container {
+  background-color: #fff;
+}
+
+.external-site_text {
+  font-family: "AvenirNextLTW01-Medium",Arial,sans-serif;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.lt-ie9 .external-site_text {
+  font-weight: normal !important;
+}
+
+.external-site_back-btn:link,
+.external-site_back-btn:visited {
+  background-color: #43484e;
+}
+
+.external-site_back-btn:hover {
+  background-color: #5b6169;
+}
+
+.external-site_back-btn,
+.external-site_proceed-btn {
+  min-width: 180px;
+  margin: 0 1.875em 1.875em 0;
+  text-align: center;
+}
+
+.external-site_reload-duration {
+  font-family: "AvenirNextLTW01-Regular",Arial,sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  margin-top: 0;
+  margin-bottom: .73076923em;
+  font-size: 1.625em;
+  line-height: 1.26923077;
+}
+
+.external-site_reload-duration em,
+.external-site_reload-duration i {
+  font-family: "AvenirNextLTW01-Italic",Arial,sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+
+.lt-ie9 .external-site_reload-duration em,
+.lt-ie9 .external-site_reload-duration i {
+  font-style: normal !important;
+}
+
+.external-site_reload-duration strong,
+.external-site_reload-duration b {
+  font-family: "AvenirNextLTW01-Demi",Arial,sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .external-site_reload-duration strong,
+.lt-ie9 .external-site_reload-duration b {
+  font-weight: normal !important;
 }
 
 .error_action_container {
