--- a/static/css/main.less
+++ b/static/css/main.less
@@ -77,6 +77,7 @@
 @import (less) "budget.less";
 @import (less) "business.less";
 @import (less) "event.less";
+@import (less) "external-site.less";
 @import (less) "error.less";
 @import (less) "bureau.less";
 @import (less) "bureau-structure.less";
