Review fixes on FOIA form
More Review fixes:
- Adding Disabled toggle to show-hide-fields
- Adding Steps ordered list stuff

- small review fix

--- a/static/css/cf-enhancements.less
+++ b/static/css/cf-enhancements.less
@@ -761,6 +761,38 @@ tbody {
     }
 }
 
+/* topdoc
+  name: Steps list modifier
+  family: cfgov-cf-enhancements
+  notes:
+    - "Set up a list with 'Step x:' instead of bullets "
+  patterns:
+    - name: Default example
+      markup: |
+        <ol class="list list__steps short-desc">
+            <li class="list-item">Fill out the form</li>
+            <li class="list-item">Generate a PDF</li>
+            <li class="list-item">Email, fax or mail the PDF</li>
+        </ol>
+  tags:
+    - cf-typography
+*/
+
+.list__steps {
+    padding-left: 0;
+    counter-reset: item;
+    list-style: none;
+
+    .list-item {
+        position: relative;
+
+        &::before {
+            content: "Step " counter(item) ": ";
+            counter-increment: item;
+        }
+    }
+}
+
 
 /* topdoc
   name: Full Width Buttons
@@ -891,7 +923,7 @@ textarea.input__long {
         <fieldset class="u-reset">
         </fieldset>
       notes:
-        - "An class to remove any default spacing or borders on an element."
+        - "A class to remove any default spacing or borders on an element."
   tags:
     - cf-utilities
 */
@@ -902,6 +934,26 @@ textarea.input__long {
     padding: 0;
 }
 
+/* topdoc
+  name: Hide only when JS is active
+  family: cf-core
+  patterns:
+    - name: .u-reset
+      markup: |
+        <fieldset class="js-reveal-with-js-class u-hide-js-only">
+        </fieldset>
+      notes:
+        - "A class to hide only when JS is active."
+  tags:
+    - cf-utilities
+*/
+
+.js-remove-to-reveal {
+  display: none !important;
+  .no-js & {
+        display: block;
+    }
+}
 
 /* topdoc
     name: EOF
