--- a/_includes/contact-macro.html
+++ b/_includes/contact-macro.html
@@ -6,65 +6,65 @@
 <div class="content-l content-l__large-gutters{{ ' ' + classes if classes }}">
     <div class="content-l_col content-l_col-1-2">
         {{ contact.content|safe }}
-    {%- if contact.web_addr %}
-        <p>
-            <a class="jump-link" href="{{ contact.web_addr }}">
-                {{ contact.web_desc if contact.web_desc else contact.web_addr }}
+    {%- if contact.web %}
+        {%- if contact.web.url %}
+            <a class="jump-link" href="{{ contact.web.url }}">
+                {{ contact.web.label if contact.web.label else contact.web.url }}
             </a>
-        </p>
+        {%- endif %}
     {%- endif %}
     </div>
     <div class="content-l_col content-l_col-1-2">
-    {%- if contact.email_0_addr or contact.phone_0_num or contact.fax_num or contact.street %}
+    {%- if contact.email or contact.phone or contact.fax or contact.street %}
         <ul class="list list__icons">
-        {%- if contact.email_0_addr %}
-            <li class="list_item u-break-word">
-                <span class="cf-icon cf-icon-email list_icon"></span>
-                <span class="h5 list_text">Email:</span>
-                <p>
-                    <a class="list_link" href="mailto:{{ contact.email_addr }}">
-                        {{ contact.email_0_addr }}
-                    </a>
-                </p>
-                {%- if contact.email_1_addr %}
-                <p>
-                    <a class="list_link" href="mailto:{{ contact.email_2_addr }}">
-                        {{ contact.email_1_addr }}
-                    </a>
-                </p>
-                {%- endif %}
-            </li>
-        {%- endif %}
-        {%- if contact.phone_0_num %}
-            <li class="list_item">
-                <span class="cf-icon cf-icon-phone list_icon"></span>
-                <span class="h5 list_text">Phone:</span>
-                <p class="short-desc">
-                    <a class="list_link list_link__phone" href="tel:{{ contact.phone_num }}">
-                    {{ format_phone(contact.phone_0_num) }}
-                    </a>
-                    {%- if contact.phone_0_desc %}
-                        <br>
-                        <span class="micro-copy micro-copy__large">
-                            {{ contact.phone_0_desc }}
-                        </span>
+        {%- if contact.email %}
+            {%- set first = True %}
+            {%- for email in contact.email %}
+                <li class="list_item u-break-word">
+                    {%- if first %}
+                        <span class="cf-icon cf-icon-email list_icon"></span>
+                        {%- set first = False %}
                     {%- endif %}
-                </p>
-                {%- if contact.phone_1_num %}
-                <p>
-                    <a class="list_link list_link__phone" href="{{ contact.phone_2_num }}">
-                        {{ format_phone(contact.phone_1_num) }}
-                    </a>
-                </p>
-                {%- endif %}
-            </li>
+                    <span class="h5 list_text">Email:</span>
+                    {%- if email.addr %}
+                        <p>
+                            <a class="list_link" href="mailto:{{ contact.email.addr }}">
+                                {{ email.addr }}
+                            </a>
+                        </p>
+                    {%- endif %}
+                </li>
+            {%- endfor %}
         {%- endif %}
-        {%- if contact.fax_num %}
+        {%- if contact.phone %}
+            {%- set first = True %}
+            {%- for phone in contact.phone %}
+                <li class="list_item">
+                    {%- if first %}
+                        <span class="cf-icon cf-icon-phone list_icon"></span>
+                        {%- set first = False %}
+                    {%- endif %}
+                    <span class="h5 list_text">Phone:</span>
+                    <p class="short-desc">
+                        <a class="list_link list_link__phone" href="tel:{{ phone.num }}">
+                            {{ format_phone(phone.num) }}
+                        </a>
+                        {%- if phone.desc %}
+                            <br>
+                            <span class="micro-copy micro-copy__large">
+                                {{ phone.desc }}
+                            </span>
+                        {%- endif %}
+                    </p>
+                </li>
+            {%- endfor %}
+        {%- endif %}
+        {%- if contact.fax %}
             <li class="list_item">
                 <span class="cf-icon cf-icon-fax list_icon"></span>
                 <span class="h5 list_text">Fax:</span>
                 <p class="short-desc">
-                    {{ format_phone(contact.fax_num) }}
+                    {{ format_phone(contact.fax.num) if contact.fax.num }}
                 </p>
             </li>
         {%- endif %}
