Fixes DF-1963 - subitems in sidenav
Fixes DF-1963 - subitems in sidenav. Adds inset to sidenav sub-pages to
visually distinguish them from sibling pages.

--- a/_includes/nav-items-toplevel.html
+++ b/_includes/nav-items-toplevel.html
@@ -12,7 +12,7 @@
       ('/blog/', 'blog', 'Blog'),
       ('/newsroom/', 'newsroom', 'Newsroom'),
       ('/contact-us/', 'contact-us', 'Contact Us'),
-      ('/the-bureau/', 'the-bureau', 'About the Bureau'),
+      ('/the-bureau/', 'the-bureau', 'The Bureau'),
       ('/activity-log/', 'activity-log', 'Activity Log'),
       ('/budget/', 'budget', 'Budget and Strategy'),
       ('/doing-business-with-us/', 'doing-business-with-us', 'Doing Business with Us')
