Renamed a hide class to more descriptive name, fixed typo and tried to implemented some tests for later

--- a/static/css/cf-enhancements.less
+++ b/static/css/cf-enhancements.less
@@ -948,7 +948,7 @@ textarea.input__long {
     - cf-utilities
 */
 
-.js-remove-to-reveal {
+.js-is-hidden {
   display: none !important;
   .no-js & {
         display: block;
